[gd_scene load_steps=2 format=3 uid="uid://bu2a7w5c22x0i"]

[ext_resource type="Script" uid="uid://6vms5tvfowux" path="res://scenes/ui/phone/PhoneScene.gd" id="1_abcde"]

[node name="PhoneScene" type="Control"]
layout_mode = 3
anchor_left = 0.351
anchor_top = 0.053
anchor_right = 0.594
anchor_bottom = 0.879
offset_left = 76.08
offset_top = 164.76
offset_right = -76.4801
offset_bottom = -128.32
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4878, 1.4878)
pivot_offset = Vector2(156, 337)
script = ExtResource("1_abcde")

[node name="PhoneCase" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 314.0
offset_bottom = 601.0

[node name="BackButton" type="Button" parent="PhoneCase"]
layout_mode = 2
text = "Back"

[node name="PhoneScreen" type="PanelContainer" parent="PhoneCase"]
layout_mode = 2

[node name="AppPanel" type="Control" parent="PhoneCase/PhoneScreen"]
layout_mode = 2

[node name="PhoneShell" type="PanelContainer" parent="PhoneCase/PhoneScreen"]
layout_mode = 2

[node name="AppGrid" type="GridContainer" parent="PhoneCase/PhoneScreen/PhoneShell"]
layout_mode = 2
columns = 3

[node name="AppButton_Messages" type="Button" parent="PhoneCase/PhoneScreen/PhoneShell/AppGrid"]
layout_mode = 2
text = "Messages"

[node name="AppButton_Discord" type="Button" parent="PhoneCase/PhoneScreen/PhoneShell/AppGrid"]
layout_mode = 2
text = "Discord"

[node name="AppButton_SocialFeed" type="Button" parent="PhoneCase/PhoneScreen/PhoneShell/AppGrid"]
layout_mode = 2
text = "Social"

[node name="AppButton_Journal" type="Button" parent="PhoneCase/PhoneScreen/PhoneShell/AppGrid"]
layout_mode = 2
text = "Journal"

[node name="AppButton_Email" type="Button" parent="PhoneCase/PhoneScreen/PhoneShell/AppGrid"]
layout_mode = 2
text = "Email"

[node name="AppButton_Grades" type="Button" parent="PhoneCase/PhoneScreen/PhoneShell/AppGrid"]
layout_mode = 2
text = "Grades"

[node name="AppButton_CameraRoll" type="Button" parent="PhoneCase/PhoneScreen/PhoneShell/AppGrid"]
layout_mode = 2
text = "Photos"

[node name="AppButton_Spore" type="Button" parent="PhoneCase/PhoneScreen/PhoneShell/AppGrid"]
layout_mode = 2
text = "Spore"
